Fix CSS word break in cards so words don't cut in middle

--- a/standalone/style.css
+++ b/standalone/style.css
@@ -384,7 +384,7 @@ body {
 }
 .card-title {
     font-size: 14px;
-    word-break: break-all;
+    word-break: break-word;
     font-weight: 500;
     color: #172b4d;
 }
